[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "quo"
author = "Secretum Inc."
author-email = "secretum.inc@pm.me"
home-page = "https://github.com/secretuminc/quo "
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License"
    ]
requires = [

]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://quo.rtfd.io"

[tool.flit.metadata.requires-extra]
test = [


]
doc = [
   
]
dev = [


]
all = [

]

[tool.isort]
profile = "black"
known_third_party = ["quo",]
skip_glob = [
    "tests/commands/test1.py",
    "tests/commands/test2.py",
    "tests/commands/test3.py",
    ]
