[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "quo"
author = "Secretum Inc."
author-email = "secretum.inc@pm.me"
home-page = "https://github.com/secretum-inc/quo "
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP"
    ]
requires = [

]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://quo.rtfd.io"

[tool.flit.metadata.requires-extra]
test = [


]
doc = [
   
]
dev = [
    

]
all = [
    "requests >=2.24.0,<3.0.0",
    "jinja2 >=2.11.2,<3.0.0",
    "python-multipart >=0.0.5,<0.0.6",
    "itsdangerous >=1.1.0,<2.0.0",
    "pyyaml >=5.3.1,<6.0.0",
    "graphene >=2.1.8,<3.0.0",
    "email_validator >=1.1.1,<2.0.0",
    "async_exit_stack >=1.0.1,<2.0.0",
    "async_generator >=1.10,<2.0.0"

]

[tool.isort]
profile = "black"
known_third_party = ["quo",]
skip_glob = [
    "tests/commands/test1.py",
    "tests/commands/test2.py",
    "tests/commands/test3.py",
    ]
