[metadata]
name = quo
version = attr: quo.__version__
url = https://quo.rtfd.io
project_urls =
    Donate = https://tinyurl.com/ygaj5fwj
    Documentation = https://quo.rtfd.io
    Changes = https://quo.readthedocs.io/en/latest/changes.html
    Source Code = https://github.com/secretum-inc/quo
    Issue Tracker = https://github.com/secretum-inc/quo/issues/
    Twitter = https://twitter.com/secretum_inc
    Chat = https://gitter.im/secretum-inc
license = MIT
license_files = LICENSE
author = Gerrishon Sirere
author_email = secretum.inc@pm.me
maintainer = Secretum Inc.
maintainer_email = secretum.inc@pm.me
description = Python based toolkit for writing Command-Line Interface applications
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = true
source =
    quo
    tests

[coverage:paths]
source =
    quo
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions,
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/quo/__init__.py: F401

[mypy]
files = src/quo
python_version = 3.6.1
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-colorama.*]
ignore_missing_imports = True

# [mypy-importlib_metadata.*]
# ignore_missing_imports = True
